--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
-NotBlank=é obrigatório
-Size=deve ter no minímo {2}  e no máximo {1} caracteres.
-Email=deve ser um e-mail válido.
+NotBlank=e obrigatorio.
+Size=deve ter no minimo {2}  e no maximo {1} caracteres.
+Email=deve ser um e-mail valido.
