--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
-NotBlank=e obrigatorio.
-Size=deve ter no minimo {2}  e no maximo {1} caracteres.
-Email=deve ser um e-mail valido.
+NotBlank=\u00E9 obrigat\u00F3rio.
+Size=deve ter no min\u00EDmo {2}  e no m\u00E1ximo {1} caracteres.
+Email=deve ser um e-mail v\u00E1lido.
